working channel manager with identical functionality to master

--- a/src/OpenLoco/CMakeLists.txt
+++ b/src/OpenLoco/CMakeLists.txt
@@ -54,6 +54,7 @@ set(OLOCO_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/Audio.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/Channel.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/OpenAL.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/ChannelManager.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/VehicleChannel.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/CommandLine.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Config.cpp"
@@ -343,6 +344,7 @@ set(OLOCO_HEADERS
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/Audio.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/Channel.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/OpenAL.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/ChannelManager.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Audio/VehicleChannel.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/CommandLine.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/src/Config.h"
